Fix and updates
