# src/typescript/coreapis-sdk/models/organization-member.ts
@@ -1,0 +1,35 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * FastAPI
+ * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
+ *
+ * OpenAPI spec version: 0.1.0
+ * 
+ *
+ * NOTE: This class is auto generated by the swagger code generator program.
+ * https://github.com/swagger-api/swagger-codegen.git
+ * Do not edit the class manually.
+ */
+
+import { User } from './user';
+ /**
+ * 
+ *
+ * @export
+ * @interface OrganizationMember
+ */
+export interface OrganizationMember {
+
+    /**
+     * @type {User}
+     * @memberof OrganizationMember
+     */
+    user: User;
+
+    /**
+     * @type {string}
+     * @memberof OrganizationMember
+     */
+    role: string;
+}
